--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,8 @@
     font-family: "Yekan";
     src: url("../assets/fonts/Yekan.ttf");
 }
-
-
-
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
