--- a/style/style.css
+++ b/style/style.css
@@ -50,8 +50,8 @@ nav h1{
     padding-bottom: 20px;
 }
 .container .row{
-    display: flex;
-    justify-content: space-around;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
     gap: 14px;
 }
 .container .row .col-{
@@ -96,4 +96,18 @@ nav h1{
     padding:25px 0px;
     font-size: 20px;
     font-family: "Yekan";
+}
+
+@media screen and (max-width:768px){
+    .container .row{
+        display: grid;
+        grid-template-columns: auto auto;
+    }
+}
+@media screen and (max-width: 568px){
+    .container .row{
+       display: grid;
+       grid-template-columns: auto;
+    }
+    
 }
